# internal/dto/auth.go
@@ -1,0 +1,15 @@
+package dto
+
+type LoginInput struct {
+	Identifier string `json:"identifier" binding:"required"`
+	Password   string `json:"password" binding:"required"`
+}
+
+type PasswordResetRequestInput struct {
+	Email string `json:"email" binding:"required,email"`
+}
+
+type PasswordResetInput struct {
+	Token    string `json:"token" binding:"required"`
+	Password string `json:"password" binding:"required,min=8"`
+}
