# internal/router/router.go
@@ -6,8 +6,8 @@ import (
 	_ "github.com/irawankilmer/lms_backend/docs" // Swagger docs
 	"github.com/irawankilmer/lms_backend/internal/handler"
 	"github.com/irawankilmer/lms_backend/internal/middleware"
-	"github.com/swaggo/files"
-	"github.com/swaggo/gin-swagger"
+	swaggerFiles "github.com/swaggo/files"
+	ginSwagger "github.com/swaggo/gin-swagger"
 )
 
 // SetupRouter initializes the routes for the application
@@ -17,8 +17,13 @@ func SetupRouter(cfg *config.Config) *gin.Engine {
 	// Swagger
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
+	r.Use(middleware.CORS())
+	r.Use(middleware.Logger())
+
 	// Public routes
 	r.POST("/login", handler.Login)
+	r.POST("/password-reset/request", handler.RequestPasswordReset)
+	r.POST("/password-reset/reset", handler.ResetPassword)
 
 	// Protected routes
 	protected := r.Group("/users", middleware.AuthMiddleware(cfg))
